--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale Agric=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoWorks3D – High-Quality 3D-Printed Auto Solutions</title>
   <style>
-    body {margin:0; font-family:'Segoe UI',Arial,sans-serif; background:#0f0f0f; color:#fff; text-align:center;}
+    body {margin:0; font-family:'Segoe UI',Arial,sans-serif; background:#0f0f0f; color:#fff; text-align:center; overflow-x:hidden;}
     .hero {padding:120px 20px 80px; background:linear-gradient(135deg,#1a1a2e,#16213e); min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;}
-    h1 {font-size:4.5em; margin:0; letter-spacing:2px; background:linear-gradient(90deg,#00d4ff,#0099cc); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
-    p {font-size:1.6em; max-width:900px; margin:20px auto; opacity:0.9;}
-    .btn {display:inline-block; background:#00d4ff; color:#000; padding:18px 40px; margin:15px; border-radius:50px; text-decoration:none; font-weight:800; font-size:1.4em; box-shadow:0 8px 25px rgba(0,212,255,0.4); transition:0.3s;}
-    .btn:hover {transform:translateY(-4px); box-shadow:0 15px 35px rgba(0,212,255,0.6);}
+    h1 {font-size:clamp(2.8rem, 10vw, 5.5rem); margin:0; letter-spacing:3px; background:linear-gradient(90deg,#00d4ff,#0099cc); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
+    p {font-size:clamp(1.2rem, 4.5vw, 1.7rem); max-width:900px; margin:30px auto 50px; opacity:0.92; line-height:1.5;}
+    .btn {display:inline-block; background:#00d4ff; color:#000; padding:18px 42px; margin:12px; border-radius:50px; text-decoration:none; font-weight:800; font-size:clamp(1.1rem, 4vw, 1.5rem); box-shadow:0 8px 25px rgba(0,212,255,0.4); transition:all 0.3s;}
+    .btn:hover {transform:translateY(-5px); box-shadow:0 18px 40px rgba(0,212,255,0.6);}
     .btn-ebay {background:#fff; color:#0064d2;}
     .btn-ebay:hover {background:#f0f0f0;}
-    img {max-width:90%; border-radius:16px; margin:40px 0; box-shadow:0 20px 50px rgba(0,0,0,0.6);}
+    @media (max-width:600px) {.hero {padding:100px 15px 60px;}}
   </style>
 </head>
 <body>
   <div class="hero">
     <h1>AUTOWORKS3D</h1>
     <p>High-Quality 3D-Printed Auto Solutions<br>Tools • Discontinued Parts • Custom Fixes</p>
-
-    <!-- Replace the link below with your real photo on Imgur (upload your clip photo there) -->
-    <img src="https://i.imgur.com/YOUR_PHOTO_LINK.jpg" alt="AutoWorks3D Parts">
-
     <div>
       <a href="https://AutoWorks3D.etsy.com" class="btn">Shop on Etsy</a>
       <a href="https://www.ebay.com/usr/autoworks3d" class="btn btn-ebay">Shop on eBay</a>
