--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="hero">
-    <h1>AUTOWORKS3D</h1>
+    <h1>AutoWorks3D</h1>
     <p>High-Quality 3D-Printed Auto Solutions<br>Tools • Discontinued Parts • Custom Fixes</p>
     <div>
       <a href="https://AutoWorks3D.etsy.com" class="btn">Shop on Etsy</a>
