--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoWorks3D – High-Quality 3D-Printed Auto Solutions</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body {margin:0; font-family:'Segoe UI',Arial,sans-serif; background:#0f0f0f; color:#fff; text-align:center; overflow-x:hidden;}
-    .hero {padding:120px 20px 80px; background:linear-gradient(135deg,#1a1a2e,#16213e); min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;}
-    h1 {font-size:clamp(2.8rem, 10vw, 5.5rem); margin:0; letter-spacing:3px; background:linear-gradient(90deg,#00d4ff,#0099cc); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
-    p {font-size:clamp(1.2rem, 4.5vw, 1.7rem); max-width:900px; margin:30px auto 50px; opacity:0.92; line-height:1.5;}
-    .btn {display:inline-block; background:#00d4ff; color:#000; padding:18px 42px; margin:12px; border-radius:50px; text-decoration:none; font-weight:800; font-size:clamp(1.1rem, 4vw, 1.5rem); box-shadow:0 8px 25px rgba(0,212,255,0.4); transition:all 0.3s;}
+    body {margin:0; font-family:'Segoe UI',Arial,sans-serif; background:#0f0f0f; color:#fff; min-height:100vh; display:flex; flex-direction:column;}
+    .hero {flex:1; display:flex; flex-direction:column; justify-content:center; align-items:center; padding:40px 20px; background:linear-gradient(135deg,#1a1a2e,#16213e);}
+    h1 {font-size:clamp(2.8rem,11vw,6rem); margin:0 0 15px 0; letter-spacing:3px; background:linear-gradient(90deg,#00d4ff,#0099cc); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
+    p {font-size:clamp(1.2rem,4.5vw,1.8rem); margin:0 0 50px 0; opacity:0.92;}
+    .btn {display:inline-block; background:#00d4ff; color:#000; padding:18px 42px; margin:10px; border-radius:50px; text-decoration:none; font-weight:800; font-size:clamp(1.1rem,4vw,1.5rem); box-shadow:0 8px 25px rgba(0,212,255,0.4); transition:0.3s;}
     .btn:hover {transform:translateY(-5px); box-shadow:0 18px 40px rgba(0,212,255,0.6);}
     .btn-ebay {background:#fff; color:#0064d2;}
-    .btn-ebay:hover {background:#f0f0f0;}
-    @media (max-width:600px) {.hero {padding:100px 15px 60px;}}
+    .socials {padding:30px; background:#0a0a0a;}
+    .socials a {color:#fff; font-size:2.2rem; margin:0 18px; opacity:0.7; transition:0.3s;}
+    .socials a:hover {opacity:1; transform:translateY(-4px);}
+    @media (max-width:600px) {.hero {padding:60px 15px;}}
   </style>
 </head>
 <body>
+
   <div class="hero">
     <h1>AutoWorks3D</h1>
     <p>High-Quality 3D-Printed Auto Solutions<br>Tools • Discontinued Parts • Custom Fixes</p>
@@ -25,5 +29,13 @@
       <a href="https://www.ebay.com/usr/autoworks3d" class="btn btn-ebay">Shop on eBay</a>
     </div>
   </div>
+
+  <div class="socials">
+    <a href="#" title="X / Twitter"><i class="fab fa-x-twitter"></i></a>
+    <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+    <a href="#" title="TikTok"><i class="fab fa-tiktok"></i></a>
+    <a href="mailto:your@email.com" title="Email"><i class="fas fa-envelope"></i></a>
+  </div>
+
 </body>
 </html>
