--- a/index.html
+++ b/index.html
@@ -4,37 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoWorks3D – High-Quality 3D-Printed Auto Solutions</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body {margin:0; font-family:'Segoe UI',Arial,sans-serif; background:#0f0f0f; color:#fff; min-height:100vh; display:flex; flex-direction:column;}
-    .hero {flex:1; display:flex; flex-direction:column; justify-content:center; align-items:center; padding:40px 20px; background:linear-gradient(135deg,#1a1a2e,#16213e);}
-    h1 {font-size:clamp(2.8rem,11vw,6rem); margin:0 0 15px 0; letter-spacing:3px; background:linear-gradient(90deg,#00d4ff,#0099cc); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
-    p {font-size:clamp(1.2rem,4.5vw,1.8rem); margin:0 0 50px 0; opacity:0.92;}
-    .btn {display:inline-block; background:#00d4ff; color:#000; padding:18px 42px; margin:10px; border-radius:50px; text-decoration:none; font-weight:800; font-size:clamp(1.1rem,4vw,1.5rem); box-shadow:0 8px 25px rgba(0,212,255,0.4); transition:0.3s;}
+    body {margin:0; font-family:'Segoe UI',Arial,sans-serif; background:#0f0f0f; color:#fff; min-height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;}
+    h1 {font-size:clamp(3rem,12vw,7rem); margin:0 0 10px 0; letter-spacing:3px; background:linear-gradient(90deg,#00d4ff,#0099cc); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
+    .tagline {font-size:clamp(1.4rem,5vw,2.2rem); font-weight:900; margin:20px 0 15px 0;}
+    .subline {font-size:clamp(1.1rem,4vw,1.6rem); margin:0 0 60px 0; opacity:0.9;}
+    .btn {display:inline-block; background:#00d4ff; color:#000; padding:18px 45px; margin:12px; border-radius:50px; text-decoration:none; font-weight:800; font-size:clamp(1.1rem,4.5vw,1.6rem); box-shadow:0 8px 25px rgba(0,212,255,0.4); transition:0.3s;}
     .btn:hover {transform:translateY(-5px); box-shadow:0 18px 40px rgba(0,212,255,0.6);}
     .btn-ebay {background:#fff; color:#0064d2;}
-    .socials {padding:30px; background:#0a0a0a;}
-    .socials a {color:#fff; font-size:2.2rem; margin:0 18px; opacity:0.7; transition:0.3s;}
-    .socials a:hover {opacity:1; transform:translateY(-4px);}
-    @media (max-width:600px) {.hero {padding:60px 15px;}}
+    .btn-ebay:hover {background:#f0f0f0;}
+    @media (max-width:600px) {.btn {padding:16px 36px;}}
   </style>
 </head>
 <body>
 
-  <div class="hero">
-    <h1>AutoWorks3D</h1>
-    <p>High-Quality 3D-Printed Auto Solutions<br>Tools • Discontinued Parts • Custom Fixes</p>
-    <div>
-      <a href="https://AutoWorks3D.etsy.com" class="btn">Shop on Etsy</a>
-      <a href="https://www.ebay.com/usr/autoworks3d" class="btn btn-ebay">Shop on eBay</a>
-    </div>
-  </div>
+  <h1>AutoWorks3D</h1>
+  <div class="tagline">High-Quality 3D-Printed Auto Solutions</div>
+  <div class="subline">Tools • Discontinued Parts • Custom Fixes</div>
 
-  <div class="socials">
-    <a href="#" title="X / Twitter"><i class="fab fa-x-twitter"></i></a>
-    <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-    <a href="#" title="TikTok"><i class="fab fa-tiktok"></i></a>
-    <a href="mailto:your@email.com" title="Email"><i class="fas fa-envelope"></i></a>
+  <div>
+    <a href="https://AutoWorks3D.etsy.com" class="btn">Shop on Etsy</a>
+    <a href="https://www.ebay.com/usr/autoworks3d" class="btn btn-ebay">Shop on eBay</a>
   </div>
 
 </body>
